test/src/main/java/spring/test/mentor/error/ErrorException.java
package spring.test.mentor.error;

public class ErrorException {
}
